[package]
name = "examples"
edition = "2021"
publish = false

[[bin]]
name = "example"
path = "deshred.rs"

[dependencies]
bincode = { workspace = true }
jito-protos = { path = "../jito_protos" }
solana-entry = { workspace = true }
solana-sdk = { workspace = true }
tokio = { version = "1", features = ["full"] }
env_logger = { workspace = true }
log = "0.4.26"

[[example]]
name = "deshred"
path = "deshred.rs"